config/samples/core_v1alpha1_gateway.yaml
apiVersion: core.inference-gateway.com/v1alpha1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: operator
    app.kubernetes.io/managed-by: kustomize
  name: gateway-sample
spec:
  # TODO(user): Add fields here
